force-app/main/default/objects/SmartIntake_Validation_Rule__mdt/SmartIntake_Validation_Rule__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Validation Rule</label>
    <pluralLabel>SmartIntake Validation Rules</pluralLabel>
</CustomObject>