force-app/main/default/objects/SmartIntake_Validation_Rule__mdt/fields/Max_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Date__c</fullName>
    <label>Max Date</label>
    <type>Date</type>
</CustomField>