force-app/main/default/objects/SmartIntake_Validation_Rule__mdt/fields/Min_Date__c.field-meta.xml
<CustomField>
    <fullName>Min_Date__c</fullName>
    <label>Min Date</label>
    <type>Date</type>
</CustomField>