force-app/main/default/objects/SmartIntake_Validation_Rule__mdt/fields/Min_Length__c.field-meta.xml
<CustomField>
    <fullName>Min_Length__c</fullName>
    <label>Min Length</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>