force-app/main/default/objects/SmartIntake_Validation_Rule__mdt/fields/Regex__c.field-meta.xml
<CustomField>
    <fullName>Regex__c</fullName>
    <label>Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>