force-app/main/default/objects/SmartIntake_Validation_Rule__mdt/fields/Validation_Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule_Key__c</fullName>
    <label>Validation Rule Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>