force-app/main/default/objects/SmartIntake_Validation_Rule__mdt/fields/Validation_Type__c.field-meta.xml
<CustomField>
    <fullName>Validation_Type__c</fullName>
    <label>Validation Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>